New section commits

--- a/backend/views/products/add.ejs
+++ b/backend/views/products/add.ejs
@@ -255,6 +255,10 @@
                         <label for="isFeatured">Featured Product</label>
                     </div>
                     <div class="checkbox-group">
+                        <input type="checkbox" id="isPopular" name="isPopular">
+                        <label for="isPopular">Popular Product</label>
+                    </div>
+                    <div class="checkbox-group">
                         <input type="checkbox" id="isNew" name="isNew">
                         <label for="isNew">New Product</label>
                     </div>
