--- a/css/style.css
+++ b/css/style.css
@@ -410,13 +410,25 @@ nav {
 .category-card {
     border: none;
     border-radius: 16px;
-    padding: 2rem 1.5rem;
+    padding: 1.5rem;
     text-align: center;
     background-color: #fff;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
     position: relative;
     overflow: hidden;
+    width: 250px;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.category-card img {
+    width: 100%;
+    height: 150px;
+    object-fit: contain;
+    margin-bottom: 1rem;
 }
 
 .category-card::before {
@@ -476,7 +488,9 @@ nav {
     margin-top: 0.5rem;
     color: #ff0000;
     font-weight: bold;
-    padding: 2rem 0;
+    padding: 0.5rem 0;
+    font-size: 1.3rem;
+    margin-bottom: 0;
 }
 
 /* Product Grid Styles */
