--- a/backend/views/dashboard/index.ejs
+++ b/backend/views/dashboard/index.ejs
@@ -380,7 +380,7 @@
                             <td><%= product._id %></td>
                             <td><%= product.name %></td>
                             <td><%= product.category %></td>
-                            <td>$<%= product.price.toFixed(2) %></td>
+                            <td>GHS <%= product.price.toFixed(2) %></td>
                             <td>
                                 <span class="status-badge <%= product.inStock ? 'status-instock' : 'status-outofstock' %>">
                                     <%= product.inStock ? 'In Stock' : 'Out of Stock' %>
