--- a/css/style.css
+++ b/css/style.css
@@ -550,7 +550,7 @@ nav {
 }
 
 .product-info {
-    padding: 0 0.5rem;
+    /* Removed padding to eliminate square card appearance */
 }
 
 .product-name {
