--- a/css/style.css
+++ b/css/style.css
@@ -509,7 +509,7 @@ nav {
 
 .product-card {
     border: none;
-    border-radius: 12px;
+    border-radius: 0;
     padding: 1rem;
     text-align: center;
     background-color: #fff;
