--- a/backend/views/partials/header.ejs
+++ b/backend/views/partials/header.ejs
@@ -6,6 +6,7 @@
     <title><%= title %></title>
     <link rel="stylesheet" href="/css/admin.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="/images/Buysmartlogo.PNG" type="image/png">
 </head>
 <body>
     <header class="admin-header">
